--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,10 @@ set(PROJECT_SOURCES
         leerenametool.cpp
         leerenametool.h
         leerenametool.ui
+        lButton.h
+        LeeCommand.h
+        LeeCommand.cpp
+
         #RenameTools.rc
 )
 
@@ -45,6 +49,8 @@ else()
             ${PROJECT_SOURCES}
             ${APP_ICON_RESOURCE_WINDOWS}
             lButton.h
+            LeeCommand.h
+            LeeCommand.cpp
         )
     endif()
 endif()
